# latent_reasoning

./: .gitignore  .gitmodules  INSTALL.md  Makefile  README-venv.md  README.md  check_env.py  install.py  pyproject.toml  requirements.txt
HRPO/unsloth/: __init__.py
HRPO/unsloth/models/: vision.py
Scratchpad-Thinking/: codi patching.ipynb  finding_specialized_heads.ipynb  gpt2 patching.ipynb  latent_thought_anchors.ipynb  linear_probe_predict_number_focus.ipynb  setup patching.ipynb  thought_configuration_analysis.ipynb
Scratchpad-Thinking/src/: model.py
