[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-reasoning"
version = "0.1.0"
description = "Combined environment for HRPO and Scratchpad-Thinking"
readme = "README-venv.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}

dependencies = [
    # Core dependencies (works on all platforms)
    "accelerate==1.7.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.9",
    "aiosignal==1.3.2",
    "airportsdata==20250224",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.9.0",
    "astor==0.8.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "blake3==1.0.4",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "compressed-tensors==0.9.1",
    "datasets==3.6.0",
    "decorator==5.2.1",
    "depyf==0.18.0",
    "diffusers==0.32.2",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker-pycreds==0.4.0",
    "docstring_parser==0.16",
    "einops==0.8.1",
    "email_validator==2.2.0",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "fastrlock==0.8.3",
    "filelock==3.18.0",
    "frozenlist==1.6.2",
    "fsspec==2025.3.0",
    "gguf==0.10.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "h11==0.14.0",
    "hf-xet==1.1.3",
    "hf_transfer==0.1.9",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.32.4",
    "idna==3.10",
    "importlib_metadata==8.6.1",
    "iniconfig==2.1.0",
    "interegular==0.3.3",
    "ipython==9.0.2",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "lark==1.2.2",
    "litellm==1.65.0",
    "llguidance==0.7.11",
    "llvmlite==0.43.0",
    "lm-format-enforcer==0.10.11",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistral_common==1.5.4",
    "modelscope==1.24.1",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "msgspec==0.19.0",
    "multidict==6.4.4",
    "multiprocess==0.70.16",
    "nanobind==2.6.1",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "ninja==1.11.1.4",
    "numba==0.60.0",
    "numpy==1.26.4",
    "openai==1.68.2",
    "opencv-python-headless==4.11.0.86",
    "orjson==3.10.16",
    "outlines==0.1.11",
    "outlines_core==0.1.26",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "partial-json-parser==0.2.1.1.post5",
    "peft==0.15.2",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prometheus_client==0.21.1",
    "prompt_toolkit==3.0.50",
    "propcache==0.3.1",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pybind11==2.13.6",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "pyzmq==26.3.0",
    "RapidFuzz==3.12.2",
    "ray==2.40.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "rpds-py==0.23.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.0.1",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.24.1",
    "setproctitle==1.3.5",
    "setuptools==78.1.1",
    "shellingham==1.5.4",
    "shtab==1.7.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "sympy==1.14.0",
    "tensorboardX==2.6.2.2",
    "thefuzz==0.22.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.52.4",
    "typeguard==4.4.2",
    "typer==0.15.2",
    "typing_extensions==4.14.0",
    "tyro==0.9.17",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uv==0.6.10",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "wandb==0.19.8",
    "watchfiles==1.0.4",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zipp==3.21.0",
]

[project.optional-dependencies]
# CUDA dependencies for Linux/Windows with NVIDIA GPUs
cuda = [
    "bitsandbytes==0.49.1",
    "cuda-python==12.8.0; platform_system=='Linux'",
    "cupy-cuda12x==13.4.1; platform_system=='Linux'",
    "cut-cross-entropy==25.1.1; platform_system=='Linux'",
    "flashinfer-python==0.2.3+cu121torch2.5; platform_system=='Linux'",
    "nvidia-cublas-cu12==12.6.4.1; platform_system=='Linux'",
    "nvidia-cuda-cupti-cu12==12.6.80; platform_system=='Linux'",
    "nvidia-cuda-nvrtc-cu12==12.6.77; platform_system=='Linux'",
    "nvidia-cuda-runtime-cu12==12.6.77; platform_system=='Linux'",
    "nvidia-cudnn-cu12==9.5.1.17; platform_system=='Linux'",
    "nvidia-cufft-cu12==11.3.0.4; platform_system=='Linux'",
    "nvidia-cufile-cu12==1.11.1.6; platform_system=='Linux'",
    "nvidia-curand-cu12==10.3.7.77; platform_system=='Linux'",
    "nvidia-cusolver-cu12==11.7.1.2; platform_system=='Linux'",
    "nvidia-cusparse-cu12==12.5.4.2; platform_system=='Linux'",
    "nvidia-cusparselt-cu12==0.6.3; platform_system=='Linux'",
    "nvidia-nccl-cu12==2.26.2; platform_system=='Linux'",
    "nvidia-nvjitlink-cu12==12.6.85; platform_system=='Linux'",
    "nvidia-nvtx-cu12==12.6.77; platform_system=='Linux'",
    "sgl-kernel==0.0.5.post4; platform_system=='Linux'",
    "sglang==0.4.4.post3; platform_system=='Linux'",
    "sglang-router==0.1.4; platform_system=='Linux'",
    "torchao==0.9.0; platform_system=='Linux'",
    "torchaudio==2.5.1+cu121; platform_system=='Linux'",
    "torchvision==0.20.1+cu121; platform_system=='Linux'",
    "triton==3.3.1; platform_system=='Linux'",
    "vllm==0.7.3; platform_system=='Linux'",
    "xformers==0.0.28.post3; platform_system=='Linux'",
    "xgrammar==0.1.11; platform_system=='Linux'",
]

# All optional dependencies
all = [
    "latent-reasoning[cuda]",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = []  # This is a meta-package for environment setup

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
